isitio-fleetman/envoy-demo/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: google_and_ddgo_split_routing
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/google"
                          route:
                            cluster: service_google
                            prefix_rewrite: "/"
                            host_rewrite: "www.google.com"
                        - match:
                            prefix: "/ddgo"
                          route:
                            cluster: service_ddgo
                            prefix_rewrite: "/"
                            host_rewrite: "www.duckduckgo.com"
                http_filters:
                  - name: envoy.router
  clusters:
    - name: service_google
      connect_timeout: 10s
      type: STRICT_DNS
      # Comment out the following line to test on v6 networks
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_google
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: www.google.com
                      port_value: 443
      tls_context:
        sni: www.google.com
    - name: service_ddgo
      connect_timeout: 10s
      type: LOGICAL_DNS
      # Comment out the following line to test on v6 networks
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_ddgo
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: www.duckduckgo.com
                      port_value: 443
      tls_context:
        sni: www.duckduckgo.com
